<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WhitelistFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_window_background"
        app:elevation="0dp">

        <TextView
            style="@style/AppText.Primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="24dp"
            android:paddingTop="24dp"
            android:paddingEnd="24dp"
            android:gravity="center_vertical"
            android:drawablePadding="12dp"
            android:text="@string/whitelisted_contacts"
            android:textSize="32sp"
            app:drawableStartCompat="@drawable/ic_whitelist"
            app:drawableTint="@color/dark_colorPrimary" />

        <TextView
            style="@style/AppText.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:paddingBottom="16dp"
            android:text="@string/whitelist_subtitle"/>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="24dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <EditText
            android:id="@+id/edit_text_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/search_background"
            android:hint="@string/search_contacts"
            android:padding="16dp"
            android:inputType="text"
            android:autofillHints="name" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_whitelist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="24dp"
        android:src="@drawable/ic_add"
        android:contentDescription="@string/add_contact_fab_description"
        app:backgroundTint="@color/dark_colorPrimary"
        app:tint="@color/white" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
