<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="24dp"
    android:paddingTop="16dp"
    android:paddingEnd="24dp"
    android:paddingBottom="16dp">

    <!-- Blocked call indicator icon -->
    <ImageView
        android:id="@+id/icon_blocked"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_call_blocked"
        android:contentDescription="@string/cd_blocked_call"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/text_caller_name"
        style="@style/AppText.Primary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/unknown"
        app:layout_constraintEnd_toStartOf="@+id/button_call"
        app:layout_constraintStart_toEndOf="@+id/icon_blocked"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_caller_number"
        style="@style/AppText.Secondary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        app:layout_constraintEnd_toStartOf="@+id/button_call"
        app:layout_constraintStart_toEndOf="@+id/icon_blocked"
        app:layout_constraintTop_toBottomOf="@+id/text_caller_name" />

    <TextView
        android:id="@+id/text_call_time"
        style="@style/AppText.Secondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/button_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/call_button_description"
        android:src="@drawable/ic_call"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/text_call_time"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
